# html-to-shopify-richtext

./: .gitignore  README.md  pyproject.toml
shopify_richtext_converter/: __init__.py  converter.py
