[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-richtext-converter"
version = "0.1.0"
description = "Convert HTML fragments to Shopify Rich Text JSON schema."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "beautifulsoup4>=4.10"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kleczekr/html-to-shopify-richtext"
Repository = "https://github.com/kleczekr/html-to-shopify-richtext" 